--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <button onclick="openProgram('https://pan-npr-calculation.vercel.app/')" 
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
                     <div class="text-4xl mb-3">🏥</div>
-                    <div class="text-lg font-semibold text-gray-800">โปรแกรมยาเตรียมผลิตเฉพาะราย</div>
+                    <div class="text-lg font-semibold text-gray-800">โปรแกรมคำนวณทางเภสัชกรรม</div>
                 </button>
 
                 <!-- Row 2 -->
