--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 📚 เอกสารทางเภสัชกรรม
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <button onclick="showComingSoon('บัญชียาหลักแห่งชาติ')" 
+                <button onclick="openProgram('https://pharmacy-database-1.vercel.app/')" 
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
                     <div class="text-4xl mb-3">📋</div>
                     <div class="text-lg font-semibold text-gray-800">บัญชียาหลักแห่งชาติ</div>
