--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="text-lg font-semibold text-gray-800">โปรแกรมลงตารางเวร</div>
                 </button>
 
-                <button onclick="showComingSoon('รอติดตามเร็วๆ นี้')" 
+                <button onclick="showComingSoon('https://tpnpharnpr.vercel.app/')" 
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
                     <div class="text-4xl mb-3">🧮</div>
                     <div class="text-lg font-semibold text-gray-800">โปรแกรมยาเตรียมผลิตเฉพาะราย</div>
