--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="text-lg font-semibold text-gray-800">โปรแกรมยืมยา/คืนยา</div>
                 </button>
 
-                <button onclick="openProgram('https://calender3-rho.vercel.app/')" 
+                <button onclick="openProgram('https://calender6.vercel.app/')" 
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
                     <div class="text-4xl mb-3">📅</div>
                     <div class="text-lg font-semibold text-gray-800">โปรแกรมลงตารางเวร</div>
