--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="text-lg font-semibold text-gray-800">เอกสาร DUE</div>
                 </button>
 
-                <button onclick="showComingSoon('เอกสารทางเภสัชกรรมอื่นๆ')" 
+                <button onclick="openProgram('https://pharmacy-database-4.vercel.app/')"  
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
                     <div class="text-4xl mb-3">📄</div>
                     <div class="text-lg font-semibold text-gray-800">เอกสารทางเภสัชกรรมอื่นๆ</div>
