--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 </button>
 
                 <!-- Row 2 -->
-                <button onclick="showComingSoon('รอติดตามเร็วๆ นี้')" 
+                <button onclick="showComingSoon('https://holidayopdnpr1.vercel.app/')" 
                         class="bg-white rounded-xl p-6 card-shadow button-hover text-center min-h-[140px] flex flex-col justify-center">
-                    <div class="text-4xl mb-3">🔍</div>
-                    <div class="text-lg font-semibold text-gray-800">รอติดตาม</div>
+                    <div class="text-4xl mb-3">📅</div>
+                    <div class="text-lg font-semibold text-gray-800">โปรแกรมลงวันลาเภสัชกร</div>
                 </button>
 
                 <button onclick="showComingSoon('รอติดตามเร็วๆ นี้')" 
