--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <i data-lucide="activity" width="22"></i>
                     </div>
                     <div class="flex flex-col">
-                        <span class="text-slate-800 font-bold text-lg leading-none">Pharmacy Portal</span>
+                        <span class="text-slate-800 font-bold text-lg leading-none">Pharmacy Department</span>
                         <span class="text-teal-600 text-xs font-medium">รพ.นพรัตนราชธานี</span>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <i data-lucide="headset" width="24"></i>
                 </div>
                 <h3 class="font-bold text-teal-800 text-sm">ต้องการความช่วยเหลือ?</h3>
-                <p class="text-xs text-teal-600 mb-3">ติดต่อ Admin หรือกลุ่มงานคอมพิวเตอร์</p>
+                <p class="text-xs text-teal-600 mb-3">ติดต่อ Admin หรือกลุ่มงานเภสัชกรรม</p>
                 <a href="tel:1300" class="block w-full bg-white text-teal-700 border border-teal-200 text-xs font-bold py-2 rounded-lg hover:bg-teal-600 hover:text-white transition-colors shadow-sm">
                     โทร. 1300
                 </a>
