--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 { name: "ยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnpharnpr.vercel.app/" },
                 { name: "คำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
                 { name: "ลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
-                { name: "รายงานความคลาดเคลื่อน", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
+                { name: "รออัพเดท", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
             ],
 
             // 2. ฐานข้อมูล (Databases)
@@ -164,9 +164,9 @@
                 { name: "บัญชียาหลักแห่งชาติ", icon: "database", color: "emerald", url: "https://pharmacy-database-1.vercel.app/" },
                 
                 // เพิ่มบัญชียา จ.2 ตรงนี้ครับ
-                { name: "บัญชียา จ.2", icon: "file-warning", color: "rose", url: "", status: "coming_soon" },
+                { name: "บัญชียา จ.2", icon: "file-warning", color: "emerald", url: "", status: "coming_soon" },
                 
-                { name: "เอกสาร DUE", icon: "file-check", color: "amber", url: "", status: "coming_soon" },
+                { name: "เอกสาร DUE", icon: "file-check", color: "cyan", url: "", status: "coming_soon" },
                 { name: "เอกสารทางเภสัชกรรมอื่นๆ", icon: "folder-search", color: "cyan", url: "https://pharmacy-database-4.vercel.app/" }
             ],
 
@@ -174,9 +174,9 @@
             news: [
                 { 
                     tag: "ด่วน", tagColor: "red", 
-                    title: "แจ้งกำหนดการลงตาราเวร ประจำเดือนมกราคม 2569", 
+                    title: "แจ้งกำหนดการลงตารางเวร ประจำเดือนมกราคม 2569", 
                     date: "17 ม.ค. 69",
-                    details: "ขอให้เจ้าหน้าที่ทุกท่านลงตาราเวรภายในวันที่ 26 มกราคม 2569 เวลา 12.00 น. หากล่าช้าก็ไม่มีอะไรหรอก ทำเล่นๆ อิอิ",
+                    details: "ขอให้เจ้าหน้าที่ทุกท่านลงตารางเวรภายในวันที่ 26 มกราคม 2569 เวลา 12.00 น. หากล่าช้าก็ไม่มีอะไรหรอก ทำเล่นๆ อิอิ",
                     link: "" 
                 },
                 { 
