--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             // หมายเหตุ: ลบคำบรรยายภาษาอังกฤษออก (desc: "") ตามที่ขอ
             apps: [
                 { name: "ระบบยืม-คืนยา", desc: "", icon: "pill", color: "blue", url: "https://borrownpr.vercel.app/" },
-                { name: "ลงตารางเวร", desc: "", icon: "calendar-days", color: "teal", url: "https://calender6.vercel.app/" },
-                { name: "ยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnpharnpr.vercel.app/" },
-                { name: "คำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
-                { name: "ลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
+                { name: "ระบบลงตารางเวรเภสัชกร", desc: "", icon: "calendar-days", color: "teal", url: "https://calender6.vercel.app/" },
+                { name: "ระบบยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnpharnpr.vercel.app/" },
+                { name: "ระบบคำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
+                { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
                 { name: "รออัพเดท", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
             ],
 
@@ -181,7 +181,7 @@
                 },
                 { 
                     tag: "ทั่วไป", tagColor: "blue", 
-                    title: "แจ้งกำหนดการต่อใบประกอบเภสัชกร", 
+                    title: "แจ้งกำหนดการต่อใบประกอบวิชาชีพเภสัชกรรม", 
                     date: "17 ม.ค. 69",
                     details: "เภสัชกรที่จบการศึกษาในปี 2564 อย่าลืมต่อใบประกอบวิชาชีพเภสัชกร เตือนตัวเอง อิอิ",
                     link: ""
