--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 { name: "ระบบยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnpharnpr.vercel.app/" },
                 { name: "ระบบคำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
                 { name: "ระบบดูแลผู้ป่วยประคับประคอง", desc: "", icon: "database", color: "pink", url: "https://palliative-npr1.vercel.app/" },
-                { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/", tag: "สำคัญ", tagColor: "red" },
+                { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
                 { name: "รออัพเดท", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
             ],
 
