--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             links: [
                 { name: "สำนักงานคณะกรรมการอาหารและยา", url: "https://www.fda.moph.go.th/" },
                 { name: "สภาเภสัชกรรม", url: "https://www.pharmacycouncil.org/" },
-                { name: "ศูนย์ข้อมูลยานพรัตนราชธานี", url: "https://nrh.nopparat.go.th/pharmacy/public/view/" }
+                { name: "โรงพยาบาลนพรัตนราชธานี", url: "https://www.nopparat.go.th/nrhwebzone/public/view/" }
             ]
         };
 
