--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 { name: "สำนักงานคณะกรรมการอาหารและยา", url: "https://www.fda.moph.go.th/" },
                 { name: "สภาเภสัชกรรม", url: "https://www.pharmacycouncil.org/" },
                 { name: "โรงพยาบาลนพรัตนราชธานี", url: "https://www.nopparat.go.th/nrhwebzone/public/view/" }
+                { name: "กลุ่มงานเภสัชกรรม", url: "https://nrh.nopparat.go.th/pharmacy/public/view/" }
             ]
         };
 
