--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 },
                 { 
                     tag: "ทั่วไป", tagColor: "blue", 
-                    title: "แจ้งกำหนดการต่อใบประกอบวิชาชีพเภสัชกรรม", 
+                    title: "แจ้งกำหนดการต่อใบประกอบวิชาชีพ", 
                     date: "17 ม.ค. 69",
                     details: "เภสัชกรที่จบการศึกษาในปี 2564 อย่าลืมต่อใบประกอบวิชาชีพเภสัชกร เตือนตัวเอง อิอิ",
                     link: ""
@@ -199,8 +199,8 @@
             // 4. ลิงก์ภายนอก
             links: [
                 { name: "สำนักงานคณะกรรมการอาหารและยา", url: "https://www.fda.moph.go.th/" },
-                { name: "สภาเภสัชกรรม", url: "https://www.pharmacycouncil.org/" },
-                { name: "โรงพยาบาลนพรัตนราชธานี", url: "https://www.nopparat.go.th/nrhwebzone/public/view/" }
+                { name: "สภา", url: "https://www.pharmacycouncil.org/" },
+                { name: "โรงพยาบาลนพรัตนราชธานี", url: "https://www.nopparat.go.th/nrhwebzone/public/view/" },
                 { name: "กลุ่มงานเภสัชกรรม", url: "https://nrh.nopparat.go.th/pharmacy/public/view/" }
             ]
         };
