--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             // 4. ลิงก์ภายนอก
             links: [
                 { name: "สำนักงานคณะกรรมการอาหารและยา", url: "https://www.fda.moph.go.th/" },
-                { name: "สภา", url: "https://www.pharmacycouncil.org/" },
+                { name: "สภาเภสัชกรรม", url: "https://www.pharmacycouncil.org/" },
                 { name: "โรงพยาบาลนพรัตนราชธานี", url: "https://www.nopparat.go.th/nrhwebzone/public/view/" },
                 { name: "กลุ่มงานเภสัชกรรม", url: "https://nrh.nopparat.go.th/pharmacy/public/view/" }
             ]
