--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             apps: [
                 { name: "ระบบยืม-คืนยา", desc: "", icon: "pill", color: "blue", url: "https://borrownpr.vercel.app/" },
                 { name: "ระบบลงตารางเวรเภสัชกร", desc: "", icon: "calendar-days", color: "teal", url: "https://calender6.vercel.app/" },
-                { name: "ระบบยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnopdnpr.vercel.app/" },
+                { name: "ระบบยาผลิตเฉพาะราย", desc: "", icon: "flask-conical", color: "purple", url: "https://tpnpharnpr.vercel.app/" },
                 { name: "ระบบคำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
                 { name: "ระบบดูแลผู้ป่วยประคับประคอง", desc: "", icon: "database", color: "pink", url: "https://palliative-npr1.vercel.app/" },
                 { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
