--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 { name: "ระบบคำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
                 { name: "ระบบดูแลผู้ป่วยประคับประคอง", desc: "", icon: "database", color: "pink", url: "https://palliative-npr1.vercel.app/" },
                 { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
+                { name: "ระบบฉลากยาเคมี", desc: "", icon: "calculator", color: "orange", url: "https://chemo-npr1.vercel.app/" },
                 { name: "รออัพเดท", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
             ],
 
@@ -175,9 +176,9 @@
             news: [
                 { 
                     tag: "ด่วน", tagColor: "red", 
-                    title: "แจ้งกำหนดการลงตารางเวร ประจำเดือนมกราคม 2569", 
-                    date: "17 ม.ค. 69",
-                    details: "ขอให้เจ้าหน้าที่ทุกท่านลงตารางเวรภายในวันที่ 26 มกราคม 2569 เวลา 12.00 น. หากล่าช้าก็ไม่มีอะไรหรอก ทำเล่นๆ อิอิ",
+                    title: "แจ้งกำหนดการลงตารางเวร ประจำเดือนกุมภาพันธ์ 2569", 
+                    date: "12 ก.พ. 69",
+                    details: "ขอให้เจ้าหน้าที่ทุกท่านลงตารางเวรภายในวันที่ 23 กุมภาพันธ์ 2569 เวลา 12.00 น. หากล่าช้าก็ไม่มีอะไรหรอก ทำเล่นๆ อิอิ",
                     link: "" 
                 },
                 { 
