--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 { name: "ระบบคำนวณทางเภสัชกรรม", desc: "", icon: "calculator", color: "orange", url: "https://pan-npr-calculation.vercel.app/" },
                 { name: "ระบบดูแลผู้ป่วยประคับประคอง", desc: "", icon: "database", color: "pink", url: "https://palliative-npr1.vercel.app/" },
                 { name: "ระบบลงวันลาเภสัชกร", desc: "", icon: "plane-takeoff", color: "indigo", url: "https://holidayopdnpr1.vercel.app/" },
-                { name: "ระบบฉลากยาเคมี", desc: "", icon: "calculator", color: "orange", url: "https://chemo-npr1.vercel.app/" },
+                { name: "ระบบฉลากยาเคมี", desc: "", icon: "file-check", color: "cyan", url: "https://chemo-npr1.vercel.app/" },
                 { name: "รออัพเดท", desc: "", icon: "wrench", color: "slate", url: "", status: "coming_soon" }
             ],
 
